--- a/bindu.tex
+++ b/bindu.tex
@@ -1396,7 +1396,7 @@ gāṃdhārī\app{\lem[wit={E}, alt={hastijihvākarṇayor}]{hastijihvākarṇay
   \rdg[wit={U1}]{liṃgadvārā°}}
 \app{\lem[wit={ceteri}, alt={ārabhye}]{\skm{d-ā}rabhye}
   \rdg[wit={ceteri}]{ārabhya}
-}\app{\lem[wit={E}]{iḍāmārgeṇa}
+}\app{\lem[wit={E},alt={°ḍāmārgeṇa}]{ḍāmārgeṇa}
   \rdg[wit={ceteri}]{iḍāmārgeṇa}
   \rdg[wit={N2}]{iḍānīṃ mārgeṇa}}
 brahmasthānaparyaṃtaṃ 
@@ -1463,35 +1463,21 @@ sūkṣmarūpeṇa tiṣṭaṃti\dd{}
  \centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{12}}}The 10 Channels]}}}
  \bigskip
  \noindent
-\blfootnote{\ldots the practice bestows \textit{siddhi}s. Even though not directly introduced as a practice, the unknown author of the \textit{Yogasvarodaya} also informs the reader about the \textit{siddhi}-bestowing nature of the channels without any practical instructions (idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam). It seems that in the \textit{Yogasvarodaya}, the ten channels could have been a part of the practice of Antaralakṣya, too. However, both texts, the \textit{Yogasvarodaya}, as well as \textit{Yogatattvabindu}, do not directly indicate a practical usage of the taxonomy of the channels. Rather they present them in textbook style merely to inform about their existance, in the same way, the \citetitle{ssplonavla} 1.66 presents them, but their position remains suspicious.} Now, the divisions of channels within the body are explained.\footnote{Networks of channels are standard in many systems of yoga. The earliest known mention refers to Upaniṣadic literature, such as the \citetitle{brhadaranyaka} 2.1.19. For a detailed depiction of systems of channels in yogic literature, see \citeauthor[2017: 172-174, 184-198]{rootsofyoga2017}.} There are ten primary channels.\footnote{The notion of ten primary channels can already be found in early texts of Haṭhayoga, e.g., the \citetitle{vivekamartandaold} (Central Library, Baroda Acc. No. 4110, 1534 Saṃvat) 17 \begin{quote} teṣu nāḍisahasreṣu dvisaptatir udāhṛtāḥ |\\
-pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ || \end{quote} ``Of those thousand channels, seventy-two have been spoken of, and among them, ten are considered most important. They are the main pathways of the vital breaths.''\\ Also cf. \citetitle{fausta1976} 34. However, the enumeration of ten main channels in yogic literature also has predecessors, e.g., in Śaivasiddhānta, cf. \citetitle{sardha} 10.4-5. Other systems, e.g., \citetitle{yajnavalkya} \uproman{4}.26 or \citetitle{vasisthasamhita} 2.21, enumerate fourteen primary channels.} Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. The Suṣumṇā flows by the path of the sun to the door of Brahma.\footnote{Discuss the course of susumna and explain the door of Brahman.}\textsuperscript{\coro{[\lowroman{5}]}} The Sarasvatī[-channel] exists at the center of the face. The two rivers, Gāndhārī and Hastjihvā, exist within the two ears. The two rivers, Pūṣā and Ālaṃbuṣā, are situated at the center of the two eyes. Śaṃkhinī stretches from the beginning of the opening of the gender through the Iḍā-channel up to the Brahmasthāna\footnote{The \textit{brahmasthāna} probably is a synonym for \textit{brahmarandhra}, ``The aperture of Brahmā/Brahman''; the fontanelle, through which the vital principle of the yogi exists at death, cf. \citetitle[438]{rootsofyoga2017}. In \citetitle{dhyanabind} 65, the \textit{brahmasthāna} is equated with the \textit{sahasrāracakra}.}. Kuhū stretches from the entrance of the root\footnote{The entrance of the root (\textit{mūladvāra}) in this passage refers to the anus, cf. \citetitle{ssplonavla} 1.66 (kuhūr gudadvāre vahati) ``Kuhū conducts through the anus''.} through the Piṅgalā-channel up to the Brahmasthāna.\textsuperscript{\coro{[\lowroman{10}]}} In such a way, the channels are situated at the ten openings. The other channels, measured as 72000, are situated with a subtle form at the roots of the hairs.
+\blfootnote{\ldots the practice bestows \textit{siddhi}s. Even though not directly introduced as a practice, the unknown author of the \textit{Yogasvarodaya} also informs the reader about the \textit{siddhi}-bestowing nature of the channels without any practical instructions (idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam). It seems that in the \textit{Yogasvarodaya}, the ten channels could have been a part of the practice of Antaralakṣya, too. However, both texts, the \textit{Yogasvarodaya}, as well as \textit{Yogatattvabindu}, do not directly indicate a practical usage of the taxonomy of the channels. Rather they present them in textbook style merely to inform about their existance, in the same way, the \citetitle{ssplonavla} 1.66 presents them, but their position in the context remains suspicious.} Now, the divisions of channels within the body are explained.\footnote{Networks of channels are standard in many systems of yoga. The earliest known mention refers to Upaniṣadic literature, such as the \citetitle{brhadaranyaka} 2.1.19. For a detailed depiction of systems of channels in yogic literature, see \citeauthor[2017: 172-174, 184-198]{rootsofyoga2017}.} There are ten primary channels.\footnote{The notion of ten primary channels can already be found in early texts of Haṭhayoga, e.g., the \citetitle{vivekamartandaold} (Central Library, Baroda Acc. No. 4110, 1534 Saṃvat) 17 \begin{quote} teṣu nāḍisahasreṣu dvisaptatir udāhṛtāḥ |\\
+pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ || \end{quote} ``Of those thousand channels, seventy-two have been spoken of, and among them, ten are considered most important. They are the main pathways of the vital breaths.''\\ Also cf. \citetitle{fausta1976} 34. However, the enumeration of ten main channels in yogic literature also has predecessors, e.g., in Śaivasiddhānta, cf. \citetitle{sardha} 10.4-5. Other systems, e.g., \citetitle{yajnavalkya} \uproman{4}.26 or \citetitle{vasisthasamhita} 2.21, enumerate fourteen primary channels.} Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. The Suṣumṇā flows by the path of the sun to the door of Brahma.\footnote{The \textit{brahmadvāra} is a synonym for the \textit{brahmarandhra}, ``The aperture of Brahmā/Brahman''; the fontanelle, through which the vital principle of the yogi exists at death, cf. \citetitle[438]{rootsofyoga2017}}\textsuperscript{\coro{[\lowroman{5}]}} The Sarasvatī[-channel] exists at the center of the face. The two rivers, Gāndhārī and Hastjihvā, exist within the two ears. The two rivers, Pūṣā and Ālaṃbuṣā, are situated at the center of the two eyes. Śaṃkhinī stretches from the beginning of the opening of the gender through the Iḍā-channel up to the Brahmasthāna\footnote{The \textit{brahmasthāna}is another synonym for \textit{brahmarandhra}. In \citetitle{dhyanabind} 65, the \textit{brahmasthāna} is equated with the \textit{sahasrāracakra}.}. Kuhū stretches from the entrance of the root\footnote{The entrance of the root (\textit{mūladvāra}) in this passage refers to the anus, cf. \citetitle{ssplonavla} 1.66 (kuhūr gudadvāre vahati) ``Kuhū conducts through the anus''.} through the Piṅgalā-channel up to the Brahmasthāna.\textsuperscript{\coro{[\lowroman{10}]}} In such a way, the channels are situated at the ten openings. The other channels, measured as 72000, are situated with a subtle form at the roots of the hairs.
 \end{tlate}
   \end{translation}
 \end{alignment}
-
-
-
-
-\chapter{Bibliography}
- \label{sec:bibli}
-   \clearpage
-\newpage 
-\thispagestyle{empty}
-\quad  \addtocounter{page}{-1}
-
-\printbibliography[heading=subbibintoc, title=Consulted Manuskripts, keyword=codex]
-
-\printbibliography[heading=subbibintoc, title=Printed Editions, keyword=printsource]
-
-\printbibliography[heading=subbibintoc, title=Secondary Literature, keyword=seclit]
-
-\printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
-
-\end{document}
-
-
-\centerline{\textrm{\small{[\uproman{27}.\textsuperscript{\coro{\lowroman{1}-\lowroman{23}}}The 10 Vitalwinds]}}}
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \ekddiv{type=ed}
+\centerline{\textrm{\small{[\uproman{27}.\textsuperscript{\coro{\lowroman{1}-\lowroman{20}}}The 10 Vitalwinds]}}}
 \bigskip
+\begin{prose}
+  \noindent
 %-----------------------------
 %[p.36]
 %idānīṃ śarīramadhye vāyavo daśa tiṣṭhanti/ \E
@@ -1506,7 +1492,8 @@ pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ || \end{quote} ``
 %-----------------------------
 %Now ten vitalwinds are situated within the body.  
 %-----------------------------
-\note[type=source, labelb=178, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 838): idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam | meruvāhye iḍānāmnī piṅgalayā samanvitā | suṣumnā bhānumārgeṇa brahmadvārāvadhi sthitā | sarasvatī sugandhā tu gāndhārī hastijihvakā | jñātavyā karṇayor madhye netrayoś ca tathāntimā | pūṣā cālambuṣā ceti mūlasthā kutracit tathā | liṅgadvārādiḍāmārge brahmasthānāvadhi priye | nāḍyantaṃ pratilomeṣu sahasrāṇāṃ dvisaptatiḥ |}
+\note[type=source, labelb=178, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. pp. 838-839): idānīṃ dehamadhyasthāḥ kathyante daśa vāyavaḥ | kāryakāraṇabhāvena kathyante tāni cihnataḥ | prāṇavāyur hṛdi sthitvā śvāsocchvāsaṃ karoti saḥ | asikāntaṃ pītam īśaṃ karoti yogasaṃjñakaḥ | apāno gudadeśasthaḥ karoty ākuñcanaṃ sa tu | stambhanañ ca tathāpānaḥ samāno nābhimaṇḍale | toṣakādipoṣakan tu nāḍīnāṃ rūcidāyakaḥ | dīptāgnimadhye 'pi tathā samānākhyā mahāparā | tālumadhye udānas tu aśnāti pibatīti ca | śarīraṃ sakalaṃ vyāpya vyānavāyuḥ pratiṣṭhitaḥ | śarīre cālanaṃ teṣu karoti sthāpayaty api |}
+\note[type=source, labelb=179, lem={\textbf{Ri}}]{SSP 1.67 (Ed. pp. 23-24): atha daśavāyavaḥ | hṛdaye prāṇavāyur ucchvāsaniḥśvāsakārako hakārasakārātmakaś ca | gude tv apānavāyuḥ recakakumbhakapūrakaś ca | nābhau samānavāyuḥ dīpakaḥ pācakaś ca | kaṇṭhe vyānavāyuḥ śoṣaṇāpy āyanakārakaś ca | tālau udānavāyuḥ grasanavamanajalpakārakaś ca| nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca |}
 idānīṃ śarīramadhye
 \app{\lem[wit={E,P,U2}]{vāyavo}
   \rdg[wit={D,N1,N2,U1}]{vāyavas}
@@ -1535,7 +1522,7 @@ teṣāṃ
   \rdg[wit={P}]{nāmāni kārmāṇi}}
 \app{\lem[wit={ceteri}]{kathyante}
   \rdg[wit={N2,U1,U2}]{kathyate}}/
-\note[type=philcomm, labelb=178a, lem={\uproman{27}.\textsuperscript{2}}]{Sentence \om in \getsiglum{B} and \getsiglum{L}.}
+\note[type=philcomm, labelb=178a, lem={\uproman{27}.\textsuperscript{\lowroman{2}}}]{Sentence \om in \getsiglum{B} and \getsiglum{L}.}
 %-----------------------------
 %prāṇavāyur hṛdayamadhye śvāsocchāsaṃ karoti/ \E
 %prāṇavāyur hṛdayamadhye śvāsochāsaṃ karoti       \P
@@ -1563,7 +1550,6 @@ teṣāṃ
   \rdg[wit={P}]{śvāsochāsaṃ}
   \rdg[wit={B}]{śvāsośvaroti}
   \rdg[wit={L}]{śvāsośvareti}}/
-\note[type=source, labelb=179, lem={\textbf{Ri}}]{SSP 1.67 (Ed. pp. 23-24): atha daśavāyavaḥ | hṛdaye prāṇavāyur ucchvāsaniḥśvāsakārako hakārasakārātmakaś ca | gude tv apānavāyuḥ recakakumbhakapūrakaś ca | nābhau samānavāyuḥ dīpakaḥ pācakaś ca| kaṇṭhe vyānavāyuḥ śoṣaṇāpy āyanakārakaś ca | tālau udānavāyuḥ grasanavamanajalpakārakaś ca| nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca | kūrmavāyuḥ cakṣuṣor unmeṣakārakaś ca| kṛkalaḥ udgārakaḥ kṣutkārakaś ca | devadatto mukhavijṛmbhakaḥ | dhanañjayo nādaghoṣakah ||1.67|| iti daśavāyvavalokanena piṇḍotpattiḥ naranārīrūpam |}
 %-----------------------------
 %aśanapānecchā bhavati/   gudamadhye                                                            \E
 %aśanapānechā  bhavati    gudamadhye 'pānāvāyus  tiṣṭhati    sa āṃkucanastaṃbhanaṃ   karoti     \P
@@ -1575,7 +1561,7 @@ teṣāṃ
 %asīte pitechā bhavati    gudamadhye apānavāyu   tiṣṭhati    sa ākuṃcanaṃ staṃbhanaṃ karoti     \U1
 %aśanapānechā  bhavati//  gudamadhye apānāvāyo   tiṣṭhati//     āṃkucanastabhanaṃ    karoti/    \U2
 %-----------------------------
-%The wish for eating an drinking exists. At the center of the anus the Apāna-Vitalwind exists. He does contraction and checking. 
+%There is desire for food an drink. At the center of the anus the Apāna-Vitalwind exists. He does contraction and checking. 
 %-----------------------------
 \app{\lem[wit={E}]{aśanapānecchā}
   \rdg[wit={B,L,P,U2}]{aśanapānechā}
@@ -1612,7 +1598,7 @@ gudamadhye
 %  nābhimadhye samāno varttate       sa samagrāṃ   nāḍīṃ śoṣayati      \U1
 %  nābhipadmamadhye samāno vartate// sa samagrā    nāḍī śoṣayati        \U2
 %-----------------------------
-%At the center of the navel the Samāna[-vitalwind] exists. He causes to dry up all the channels.
+%At the center of the navel the Samāna[-vitalwind] exists. He causes to absorp [substances from] all the channels.
 %-----------------------------
 \app{\lem[wit={ceteri}]{nābhimadhye}
   \rdg[wit={U2}]{nābhipadmamadhye}
@@ -1642,7 +1628,7 @@ gudamadhye
 %tathā nāḍīṃ pośa iti                   rucim  utpādayati    agnīṃ  dīpayati \U1
 %            ṣoṣayati                   rucim  utpādayati//  vahniṃ dīpayati// \U2
 %-----------------------------
-%In this way the channels are caused to thrive, beauty is caused to be generated and the fire is caused to light up.  
+%In this way the channels are caused nourished, appetite is caused to be generated and the fire [of digestion] is caused to light up.
 %-----------------------------
 \app{\lem[wit={ceteri}]{tathā}
   \rdg[wit={U2}]{\om}}
@@ -1701,25 +1687,83 @@ sa \app{\lem[wit={ceteri}, alt={vāyur}]{vāyu\skp{r-a}}
 pānīyaṃ \app{\lem[wit={ceteri}]{pibati}
   \rdg[wit={P}]{pībati}
   \rdg[wit={B,L}]{pibatī}}/
-\app{\lem[wit={ceteri}]{nāgavāyuḥ}
+\app{\lem[type=emendation, resp=egoscr]{vyānavāyuḥ}
+  \rdg[wit={ceteri}]{nāgavāyuḥ}
   \rdg[wit={L}]{nāgavāyu°}
   \rdg[wit={D}]{nānāgavāyuḥ}}
 \app{\lem[wit={ceteri}]{sakale}
   \rdg[wit={B,L}]{sakala°}
   \rdg[wit={E}]{sarva°}}
 śarīre varttate/ 
-%\note[type=philcomm, labelb=s35.z3a, lem={nāgavāyu}]{Only nine of the promised ten vitalwinds are described here. The missing vitalwind is \textit{vyānavāyu}. The description of \textit{nāgavāyu} matches rather the \textit{vyānavāyu}. Witnesses E, P, B, L and U2 preserve a nonsensical fragment after the description of \textit{nāgavāyu}: śokam āpnoti vikṛtaḥ. Possibly the description of \textit{vyānavāyu} was lost due to an eyeskip of a scribe.}
+\note[type=philcomm, labelb=s35.z3a, lem={vyānavāyuḥ}]{I have emendend \textit{nāgavāyu} to \textit{vyānavāyu} based on the description provided in PT\textsuperscript{qcr \cdot YSV}, as the latter term corresponds to the given function. Some witnesses, namely \getsiglum{E}, \getsiglum{P}, \getsiglum{B}, \getsiglum{L} and \getsiglum{U2} contain a nonsensical fragment, ``\textit{śokam āpnoti vikṛtaḥ}'',  after the description of the \textit{vāyu}. This is likely a remnant of the original description of \textit{nāgavāyu} that was lost during transmission.}
 tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{skm{d-vā}yoḥ}
   \rdg[wit={P}]{vāyo}}
 \app{\lem[wit={ceteri}]{śarīraṃ}
   \rdg[wit={B,L}]{śarīre}}
-\app{\lem[type=emendation, resp=egoscr]{calayati}
-  \rdg[wit={E}]{cālayati| śokam āpnoti || vivilaḥ}
-  \rdg[wit={P}]{calayati śopham āpnoti vikṛtaḥ}
-  \rdg[wit={B}]{cālatī | śokam āpnoti vikrutaḥ ||}
-  \rdg[wit={L}]{cālayatī śokam āpnoti vikutaḥ}
-  \rdg[wit={U2}]{calayati śokam āpnoti vikṛtaḥ ||}
-  \rdg[wit={ceteri}]{calati}}/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{15}]}\end{otherlanguage}}
+\app{\lem[wit={P,U2}]{calayati}
+  \rdg[wit={E}]{cālayati}
+  \rdg[wit={B}]{cālatī}
+  \rdg[wit={L}]{cālayatī}
+  \rdg[wit={U2}]{calayati}
+  \rdg[wit={X}]{calati}}/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{15}]}\end{otherlanguage}}
+\begin{otherlanguage}{english}\sic*{}\end{otherlanguage}
+\crazy{\app{\lem[wit={U2}]{śokam āpnoti vikṛtaḥ}
+  \rdg[wit={B}]{śokam āpnoti vikrutaḥ}
+  \rdg[wit={E}]{śokam āpnoti || vivilaḥ}
+  \rdg[wit={L}]{śokam āpnoti vikutaḥ}
+  \rdg[wit={P}]{śopham āpnoti vikṛtaḥ}
+  \rdg[wit={U2}]{śokam āpnoti vikṛtaḥ}
+  \rdg[wit={X}]{\om}}}\begin{otherlanguage}{english}\sic*{}\end{otherlanguage}
+    \end{prose}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+\centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{20}}}The 10 Vitalwinds]}}}
+\bigskip
+\begin{tlate}
+  \noindent
+Now ten vital winds are situated within the body. Their functions are taught. The Prāṇa vital wind is located in the middle of the heart and causes inhalation and exhalation. There is a desire for food and drink. At the center of the anus, the Apāna vital wind exists.\textsuperscript{\coro{[\lowroman{5}]}} He does contraction and checking. At the center of the navel, the Samāna vital wind exists. He causes to absorb [substances from]\footnote{The term \textit{śoṣayati} literally means ``causes to dry up'' or ``causes to disappear''. In this context however, a better ideomatic translation would be ``causes to absorp'', since the Samāna vital wind absorbs the eaten substances in the body and distributes it everywhere, cf. \citetitle{yajnavalkya} 4.55-57 (Ed. p. 40) and 4.69ab (Ed. p. 42).}  all the channels. In this way, the channels are caused to be nourished, appetite is caused to be generated, and the fire [of digestion] is caused to light up.\textsuperscript{\coro{[\lowroman{10}]}}Within the throat the Udāna vitalwind is situated. This wind swallows food, [and] it drinks water. The Vyāna vital wind exists in the entire body. Through the vital wind, the body is caused to move.\textsuperscript{\coro{[\lowroman{15}]}} \sic{\crazy{\ldots}}\footnote{In the PT\textsuperscript{qcr \cdot YSV} (Ed. pp. 838-839) the order of the ten vital winds is as follows: Prāṇa, Apāna, Samāna, Udāna, Vyāna, Kūrma, Nāga, Kṛkāra, Devadatta, Dhanañjaya. In the SSP 1.67 (Ed. pp. 23-24): Prāṇa, Apāna, Samāna, Vyāna, Udāna, Nāga, Kūrma, Kṛkāra, Devadatta, Dhanañjaya. In both texts, which are the probable sources and templates for Rāmacandra the Vyāna vital wind appears to be within the group of the first five major viral winds. This group of five winds is undoubtedly common across yogic literature, cf. \citeauthor[2017: 187-198]{rootsofyoga2017}. The emergence of Nāga instead of Vyāna in the witnesses indicates corruption of transmission. The description of the function of the vital wind in this passage makes it likely that the term Vyāna was dropped, replaced with Nāga and in turn the description of the function of Nāga was lost. The odd and nonsenseical phrase \textit{śokam āpnoti vikṛtaḥ} might be a remainder of this lost description of Nāga. PT\textsuperscript{qcr \cdot YSV} (Ed. pp. 838-839) reads: \textit{udgāre nāga ākhyātaḥ ūrddhavāyuḥ pracālane} ``When belching, it is called the Naga vital wind that initiates the forward movement'' and  SSP 1.67 (Ed. pp. 23-24) reads: \textit{nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca} ``The Nāga vital wind pervades all limbs of the body and is releasing and moving.''  Based on these readings of the possible templates the passage still remains puzzling.}
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\ekdpb*{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \ekddiv{type=ed}
+    \begin{prose}
+      \noindent
+\note[type=source, labelb=178a, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. pp. 838-839): netramadhye kūrmanāmā nimeṣonmeṣakṛdayam | udgāre nāga ākhyātaḥ ūrddhavāyuḥ pracālane | kṛkaraḥ kṣutkaro jñeyo devadatto vijṛmbhaṇe | dhanañcayaḥ saccidākāro mṛtadehaṃ na muñcati | yady api sargakāṇḍe sarvametaduktaṃ tathāpi kāryakāraṇabhāvajñāpanāya punarnirdiṣṭamiti na punaruktam |}
+\note[type=source, labelb=179a, lem={\textbf{Ri}}]{SSP 1.67 (Ed. pp. 23-24): kūrmavāyuḥ cakṣuṣor unmeṣakārakaś ca| kṛkalaḥ udgārakaḥ kṣutkārakaś ca | devadatto mukhavijṛmbhakaḥ | dhanañjayo nādaghoṣakah ||1.67|| iti daśavāyvavalokanena piṇḍotpattiḥ naranārīrūpam |}
 %-----------------------------
 %kūrmavāyur netramadhye tiṣṭhati/ nimeṣonmeṣaṃ karoti/ \E
 %kūrmavāyur netramadhye           nimeṣonmeṣaṃ karoti \P
@@ -1731,12 +1775,12 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{skm{d-vā}yoḥ}
 %\om                                                     \U1
 %kūrmavāyur netramadhye           nimiṣonmeṣaṃ karoti//            \U2
 %-----------------------------
-%The Kūrma-vitalwind exists within the eyes. It causes [the] opening and closing [of the eyes]. 
+%The Kūrma vitalwind exists within the eyes. It causes [the] opening and closing [of the eyes]. 
 %-----------------------------
 \app{\lem[wit={E,P,U2}, alt={kūrmavāyur}]{kūrmavāyu\skp{r-ne}}
   \rdg[wit={B,L}]{kūrmavāyoḥ}
-  \rdg[wit={D,N1,N2}]{kūrmo vāyu}}
-\skm{r-ne}tramadhye
+  \rdg[wit={D,N1,N2}]{kūrmo vāyu}
+}\skm{r-ne}tramadhye
 \app{\lem[wit={D,E,N1,N2}]{tiṣṭhati}
   \rdg[wit={ceteri}]{\om}}/  
 \app{\lem[wit={E,P,B,U2}]{nimeṣonmeṣaṃ}
@@ -1756,7 +1800,7 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{skm{d-vā}yoḥ}
 %                                       \U1
 %puṣkaravāyur      udgāraṃ karoti//    \U2
 %-----------------------------
-%From the Kṛkala-vitalwind gagging arises. 
+%From the Kṛkala vitalwind gagging arises. 
 %-----------------------------
 \app{\lem[wit={D,N1,N2},alt={kṛkalavāyor}]{kṛkalavāyo\skp{r-u}}
   \rdg[wit={B,L,P}]{kṛkalavāyur}
@@ -1782,7 +1826,7 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{skm{d-vā}yoḥ}
 % devadattavāyor  jaṃbhā utpadyate   dhanaṃjayavāyoḥ sabta utpadyate \U1
 % devadattavāyo   jṛṃbhā bhavati//   dhanaṃjayavāyoḥ śabda utpadyate// \U2
 %-----------------------------
-%From the Devadatta-vitalwind jawning arises. From the Dhanaṃjaya-vitalwind speech arises. 
+%From the Devadatta vitalwind jawning arises. From the Dhanaṃjaya vitalwind speech arises. 
 %-----------------------------
 \app{\lem[wit={ceteri}, alt={devadattavāyor}]{devadattavāyo\skp{r-jṛ}}
   \rdg[wit={E}]{devadattavāyoḥ}
@@ -1805,11 +1849,213 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{skm{d-vā}yoḥ}
   \rdg[wit={N2}]{śabdo°}
   \rdg[wit={U1}]{sabta}}
 utpadyate\dd{}\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{20}]}\end{otherlanguage}}
+    \end{prose}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+    \begin{tlate}
+\noindent
+The Kūrma vital wind exists within the eyes. It causes [the] opening and closing [of the eyes]. From the Kṛkala, vital wind gagging arises. From the Devadatta, vital wind jawning arises. From the Dhanaṃjaya, vital wind speech arises.\textsuperscript{\coro{[\lowroman{20}]}}
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\chapter{Bibliography}
+ \label{sec:bibli}
+   \clearpage
+\newpage 
+\thispagestyle{empty}
+\quad  \addtocounter{page}{-1}
 
+\printbibliography[heading=subbibintoc, title=Consulted Manuskripts, keyword=codex]
 
-   \begin{tlate}
-  \ekddiv{type=trans}
-\bigskip
-\centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{23}}}The 10 Vitalwinds]}}}
+\printbibliography[heading=subbibintoc, title=Printed Editions, keyword=printsource]
+
+\printbibliography[heading=subbibintoc, title=Secondary Literature, keyword=seclit]
+
+\printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
+
+\end{document}
+
+\begin{ekdosis}
+  \ekddiv{type=ed}
+\centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{20}}}Madhyalakṣya]}}}
  \bigskip
- Now [there are] ten vitalwinds are situated within the body. The Prāṇa vitalwind is located in the middle of the heart and causes inhalation and exhalation. The wish for eating an drinking exists. At the center of the anus the Apāna-Vitalwind exists. He does contraction and checking. At the center of the navel the Samāna[-vitalwind] exists. He causes to dry up all the channels. In this way the channels are caused to thrive, beauty is caused to be generated and the fire is caused to light up. Within the throat the Udāna-vitalwind is situated. This wind swallows food, [and] it drinks water. The Nāga-vitalwind exists in the entire body. Through the vitalwind the body is caused to move. The Kūrma-vitalwind exists within the eyes. It causes [the] opening and closing [of the eyes]. From the Kṛkala-vitalwind gagging arises. From the Devadatta-vitalwind jawning arises. From the Dhanaṃjaya-vitalwind speech arises.
+ \begin{prose}
+   \noindent
+%----------------------------
+%\om                               \E
+%idānī  madhyalakṣaṃ   kathyate      \P
+%idānīṃ madhyalakṣaṇaṃ kathyate//  \B DSCN7164 Z.1
+%idānīṃ madhye lakṣaṃ  kathyate//   \L
+%idānīṃ madhyalakṣyaṃ  kathyate//   \N1
+%idānīṃ madhyalakṣyaṃ  kathyate//   \D
+%idānīṃ madhyalakṣaṇaṃ kathyate//  \N2
+%idānīṃ madhyalakṣyaṃ  kathyate     \U1
+%idānīṃ madhye lakṣyaṃ kathyate//  \U2
+%-----------------------------
+%Now the central fixation is taught. 
+%-----------------------------
+\note[type=source, labelb=180, lem={madhyalakṣyaṃ}]{Ysv (PT): idānīṃ madhyalakṣan tu kathyate siddhikārakam | śvetaṃ raktaṃ tathā pītaṃ dhūmrākāran tu nīlabham |}
+\app{\lem[wit={ceteri}]{idānīṃ}
+  \rdg[wit={P}]{idānī}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={N1,D,U1}]{madhyalakṣyaṃ}
+  \rdg[wit={B,N2}]{madhyalakṣaṇaṃ}
+  \rdg[wit={P}]{madhyalakṣaṃ}
+  \rdg[wit={L}]{madhye lakṣaṃ}
+  \rdg[wit={U2}]{madhye lakṣyaṃ}
+  \rdg[wit={E}]{\om}}
+kathyate/
+%-----------------------------SSP. S41!!! almost identical! 
+%              aṃtha ca pītavarṇaṃ   raktavarṇaṃ vā dhūmrākāraṃ yan  nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇḍalasadṛśaṃ     arddhacandrasadṛśaṃ jvalad  ākāśasamākāraṃ  \E
+%śvetavarṇaṃ   atha     pītavarṇaṃ   raktaṃ vā      dhūmrākāraṃ yan  nīlavarṇaṃ vā   'gniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalasadṛśaṃ     arddhacaṃdrasadṛśaṃ jvalad  ākāśasamākāraṃ  \P
+%śvetavaraṃ    atha     pītavarṇaṃ// rakta  vā      dhūmrākāraṃ yan  nīlavarṇaṃ vā// agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalasadṛśaṃ/    ūrdhvacaṃdrasadṛśaṃ jvalad  ākāśasamākāraṃ// \B
+%śvetavarṇaṃ   atha     pītavarṇaṃ   raktaṃ vā      dhūmrākāraṃ yan  nīlavarṇaṃ vā// agniśikhāsadṛśaṃ vidyutsamāne    sūryamaṇdalasadṛśaṃ//   ardhacaṃdrasadṛśaṃ  jvalad  ākāśasamākāra   \L
+%śvetavarṇā/   atha vā  pītavarṇaṃ   raktaṃ vā      dhūmāra     va   nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalaṃ sadṛśaṃ/  ūrdhvacaṃdrasadṛśaṃ jvalad  ākāśasamānakāraṃ//  \N1
+%śvetavarṇaṃ// atha vā  pītavarṇaṃ   raktaṃ vā      dhūmākāro   vā   nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ// sūryamaṇdalaṃ sadṛśaṃ// ūrdhvacaṃdrasadṛśaṃ jvalad  ākāśasamānakāraṃ//  \D
+%śvetavarṇā    atha vā  pītavarṇa    raktavarṇa     dhūmravarṇa      nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalasadṛśaṃ     ūrdhvacaṃdrasadṛśaṃ jvalad  ākāśasamānakāraṃ//  \N2
+%svetavarṇaṃ   atha vā  pītavarṇaṃ   raktaṃ vā      dhūmrākāra  van  nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalasadṛśaṃ     ārdhacaṃdrasadṛśaṃ  jalad---ā----samānākāraṃ \U1
+%svatavarṇaṃ   atha vā  pītavarṇaṃ// raktaṃ vā      dhūmrākāraṃ yan  nīlavarṇaṃ vā   agniśikhāsadṛśaṃ vidyutsamānaṃ   sūryamaṇdalasadṛśaṃ     arddhacaṃdrasadṛśaṃ jvalad--ākāraṃ samākāraṃ \U2
+%-----------------------------
+%White-colored, or yellow-colored or red-coloured or smoke-coloured or blue-coloured, like the flame of fire, equal to a lightning, like the orb of the sun, like a half-moon, appearing like flaming space, ...  
+%-----------------------------
+\note[type=source, labelb=181, lem={agniśikhāsadṛśaṃ}]{Ysv (PT): agnijvālāsamānābhā vidyutpuñjasamaprabhā | ādityamaṇḍalākāramathavā candramaṇḍalam |}
+\app{\lem[wit={ceteri}, alt={°śveta}]{śveta}
+  \rdg[wit={U1}]{sveta°}
+  \rdg[wit={U2}]{svata°}
+  \rdg[wit={E}]{\om}
+}śveta\app{\lem[wit={P,L,U1,U2}, alt={°varṇaṃ}]{varṇaṃ}
+  \rdg[wit={P}]{°varaṃ}
+  \rdg[wit={N1}]{°varṇā |}
+  \rdg[wit={D}]{°varṇaṃ ||}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{atha}
+  \rdg[wit={E}]{aṃtha}}
+\app{\lem[wit={ceteri}]{vā}
+  \rdg[wit={E}]{ca}
+  \rdg[wit={P,B,L}]{\om}}
+pīta\app{\lem[wit={ceteri}, alt={°varṇaṃ}]{varṇaṃ}
+  \rdg[wit={B,U2}]{°varṇaṃ ||}
+  \rdg[wit={N2}]{°varṇa}}
+rakta\app{\lem[wit={E}, alt={°varṇaṃ}]{varṇaṃ}
+  \rdg[wit={N2}]{°varṇa}
+  \rdg[wit={ceteri}]{°ṃ}
+  \rdg[wit={B}]{\om}}
+\app{\lem[wit={ceteri}]{vā}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[type=emendation, resp=egoscr]{dhūmravarṇaṃ}
+  \rdg[wit={N2}]{\korr dhūmravarṇa}
+  \rdg[wit={D}]{dhūmākāro}
+  \rdg[wit={N1}]{dhūmāra}
+  \rdg[wit={U1}]{dhūmrākāra}
+  \rdg[wit={ceteri}]{dhūmrākāraṃ}}
+\note[type=philcomm, labelb=182, lem={dhūmra°}]{Given the repetetive mentioning of colours compounded with °\textit{varṇaṃ} before and after the mentioning of \textit{dhūmra}°, and previous usage in the same compound it is highly likely that \textit{dhūmravarṇaṃ} was the original reading.}
+\app{\lem[wit={D}]{vā}
+  \rdg[wit={N1}]{va}
+  \rdg[wit={U1}]{van}
+  \rdg[wit={ceteri}]{yan}
+  \rdg[wit={N2}]{\om}}
+nīlavarṇaṃ
+\app{\lem[wit={ceteri}]{vā}
+  \rdg[wit={B,L}]{vā ||}}
+\app{\lem[wit={P}, alt={°gni}]{'gni}
+  \rdg[wit={ceteri}]{agni°}
+}śikhāsadṛśaṃ vidyut\app{\lem[wit={ceteri},alt={°samānaṃ}]{samānaṃ}
+  \rdg[wit={L}]{°samāne}
+  \rdg[wit={D}]{°samānaṃ ||}}
+sūryamaṇdala\app{\lem[wit={ceteri}, alt={°sadṛśaṃ}]{sadṛśaṃ}
+  \rdg[wit={N1,D}]{°ṃ sadṛśaṃ}}
+\app{\lem[wit={ceteri},alt={ardha°}]{ardha}
+  \rdg[wit={U1}]{ārdha°}
+  \rdg[wit={B,N1,N2,D}]{ūrdhva°}
+}candrasadṛśaṃ
+\app{\lem[wit={ceteri}, alt={jvalad°}]{jvala\skp{d-ā}}
+  \rdg[wit={U1}]{jalad}
+}\app{\lem[wit={ceteri}, alt={°ākāśa°}]{\skm{d-ā}kāśa}
+  \rdg[wit={U1}]{°ā°}
+  \rdg[wit={U2}]{°ākāraṃ}
+}\app{\lem[wit={ceteri}, alt={°samākāraṃ}]{samākāraṃ}
+  \rdg[wit={N1,N2,D,U1}]{°samānakāraṃ}
+  \rdg[wit={U2}]{samakāraṃ}
+  \rdg[wit={L}]{°samākāra}}/
+%-----------------------------
+%svaśarīraparimitaṃ      tejomanomadhye tathyaṃ kartavyam// \E
+%svaśarīraparimitaṃ      tejomanomadhye lakṣyaṃ karttavyaṃ\P
+%svaśarīraparimitaṃ      tejomanomadhye lakṣaṃ kartavyaṃ//  \B
+%svaśarīraparimitaṃ      tejomanomadhye lakṣaṃ kartavyaṃ//  \L
+%svaśarīraparimitaṃ      tejomanomadhye lakṣyaṃ karttavyaṃ//  \N1
+%svaśarīraparimitaṃ      tejomanomadhye lakṣyaṃ karttavyaṃ// \D
+%svaśarīraparimitaṃ      tejomanomadhye lakṣaṇaṃ karttavyaṃ//  \N2
+%svaśarīraparimanomittaṃ tejomadhye     lakṣyaṃ karttavyaṃ  \U1
+%svaśarīraparimitaṃ      tejomanomadhye lakṣaṃ kartavyaṃ//  \U2
+%-----------------------------
+%measured according to ones own body, the fixation shall be directed onto the center of the glowing mind.  
+%-----------------------------
+\note[type=source, labelb=183, lem={tejomanomadhye}]{Ysv (PT): jvaladākāśatulyaṃvā bhāvayed rūpamātmanaḥ | etaj jyotirmayaṃ dehaṃ manomadhye tu lakṣayet |}
+svaśarīrapari\app{\lem[wit={ceteri},alt={°mitaṃ}]{mitaṃ}
+  \rdg[wit={U1}]{°manomittaṃ}}
+tejo\app{\lem[wit={ceteri},alt={°mano}]{mano}
+  \rdg[wit={U1}]{\om}
+}madhye
+\app{\lem[wit={P,N1,D,U1}]{lakṣyaṃ}
+  \rdg[wit={E}]{tathyaṃ}
+  \rdg[wit={B,L,U2}]{lakṣaṃ}
+  \rdg[wit={N2}]{lakṣaṇaṃ}}
+kartavyaṃ/
+%-----------------------------
+%ekasmin lakṣye    kṛte sati manomadhye sthitasya malasya dāho bhavati/ \E [p.38]%
+%etasmil lakṣye    kṛte sati manomadhye sthitasya         dāho bhavati \P
+%etasmin lakṣe     kṛte satī manomadhye sthitasya malasya dāho bhavati \B
+%etasmil lakṣe     kṛte satī manomadhye sthitasya malasya dāho bhavati... \L
+%ekasmin lakṣye    kṛte sati manomadhye sthitasya malasya dāho bhavati/ \N1
+%ekasmin lakṣye    kṛte sati manomadhye sthitasya malasya dāho bhavati// \D
+%ekasmin lakṣaṇo   kṛte sati manomadhye sthitasya malasya dāho bhavati/ \N2
+%etasmin na lakṣye kṛte satī manomadhye sthitasya malasya dāho bhavati \U1 %%%281.jpg
+%etasmil lakṣe     kṛte satī manomadhye sthitasya malasya dāho bhavati// \U2
+%-----------------------------
+%While abiding in this fixation the burning of the impurity in the center of the mind arises. 
+%-----------------------------
+\note[type=source, labelb=184, lem={malasya}]{Ysv (PT): eteṣāñ ca kṛte lakṣe nānāduḥkhaṃ praṇaśyati | manas astu malo yāti mahānando bhavet tataḥ |}
+\app{\lem[wit={P,L,U2},alt={etasmil}]{etasmi\skp{ll-a}}
+  \rdg[wit={U1}]{etasmin}
+  \rdg[wit={ceteri}]{ekasmin}
+}\app{\lem[wit={ceteri},alt={lakṣye}]{\skm{ll-a}kṣye}
+  \rdg[wit={B,L,U2}]{lakṣe}
+  \rdg[wit={U1}]{na lakṣye}
+  \rdg[wit={N2}]{lakṣaṇo}}
+kṛte
+\app{\lem[wit={ceteri}]{sati}
+  \rdg[wit={B,L,U1,U2}]{satī}}
+manomadhye sthitasya
+\app{\lem[wit={ceteri}]{malasya}
+  \rdg[wit={P}]{\om}}
+dāho bhavati/ 
+%-----------------------------
+%manasaḥ   sattvaguṇaprakāśo   bhavati/     puruṣa ānandamayo bhūtvā tiṣṭhati//   \E 
+%manasaḥ   sattvaguṇaḥ prakaṭo bhavati      puruṣa ānandamayo bhūtvā tiṣṭhati    \P   %%%7650.jpg
+%manasaḥ// sattvaguṇo  prakaṭo  bhavati//   puruṣa ānandamayo bhūtvā tiṣṭhati// \B
+%manasaḥ// sattvaguṇaḥ prakaṭo bhavati      puruṣa ānandamayo bhūtvā tiṣṭhati//  \L
+%manasaḥ   sattvaguṇe  prakaṭo  bhavati/    puruṣa ānandamayo bhūtvā tiṣṭhati//    \N1
+%manaḥ saḥ sattvaguṇo  prakaṭo  bhavati//   puruṣa ānandamayo bhūtvā tiṣṭhati// \D
+%manasaḥ   sattvaguṇo  prakaṭo  bhavati/    puruṣa ānandamayo bhūtvā tiṣṭhati//    \N2
+%manasaḥ   sattvaguṇo  prakaṭo  bhavati     puruṣa ānandamayo bhūtvā tiṣṭhati       \U1
+%manasaḥ   satvaguṇaprakaśo    bhavati//    puruṣa ānandamayo bhūtvā tiṣṭhati//    \U2 %%414.jpg
+%-----------------------------
+%The Sattva-quality of the mind becomes revealed. After this has happend the person abides supreme bliss. 
+%-----------------------------
+mana\app{\lem[wit={ceteri},alt={°saḥ}]{saḥ}
+  \rdg[wit={B,L}]{°saḥ ||}
+  \rdg[wit={D}]{manaḥ saḥ}}
+sattva\app{\lem[wit={B,D,N2,U1},alt={°guṇo}]{guṇo}
+  \rdg[wit={N1}]{°guṇe}
+  \rdg[wit={E,U2}]{°guṇa°}
+  \rdg[wit={P,L}]{°guṇaḥ}}
+\app{\lem[wit={ceteri}]{prakaṭo}
+  \rdg[wit={E,U2}]{°prakāśo}}
+bhavati/ puruṣa ānandamayo bhūtvā tiṣṭhati\dd{}
+\end{prose}
+\end{ekdosis}
+
+
+\centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{20}}}Madhyalakṣya]}}}
+ \bigskip
