Edition and Translation aligned until Madhyalaksya

--- a/bindu.bib
+++ b/bindu.bib
@@ -65,6 +65,16 @@ address={Lonavla},
   keywords={printsource},
 }
 
+@book{goraksapaddhati,
+  title={Gorakṣapaddhati},
+  subtitle={Goraksha Samhita: Also Known As Goraksha Paddhati},
+  editor= {Vishnuswaroop, Swami},
+  year={2017},
+  publisher={Divine Yoga Institute},
+  address={Kathmandu},
+  keywords={printsource},
+}
+
 @book{yogacintamani,
  title={Yogacintāmaṇi (Śivānandasarasvatī)},
  editor={Śarma, Haridās},
@@ -174,7 +184,7 @@ vārttikamarīcibhiḥ sahitaḥ},
 @book{kumbhaka, 
   title={Kumbhakapaddhati},
   subtitle={Kumbhaka-Paddhati of Raghuvīra: Science of Prāṇāyāma}, 
-  editor={Gharote, M.L. and Devnath, Parimal},
+  editor={Gharote, M. L. and Devnath, Parimal},
   year={2021},
   address={Lonavla},
   publisher={The Lonavla Yoga Institute (India)},
@@ -505,6 +515,16 @@ Sound},
    volume={38},
    number={2},
    pages={262 ff},
+   keywords={seclit},
+}
+
+@article{birch2019saiva,
+   title={The Tantric Śaiva Origins of Rājayoga},
+   author={Birch, Jason},
+year={2019}, 
+note={Presented at the Conference of the Society for Tantric Studies, Flagstaff, Arizona, on 28 September 2019.},
+  howpublished = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}},
+  note = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}; Zugriff: 04.05.2023},
    keywords={seclit},
 }
 
@@ -1062,7 +1082,7 @@ address={Pondicherry},
    keywords={codex},
 }
 
-@codex{vivekamartandaold,
+@codex{vivekamartandaolda,
    title={Vivekamārtaṇḍa},  
    author={Gorakṣa},
    address={Central Library, Baroda},
@@ -1301,7 +1321,8 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
 }
 
 @book{nishvasa2015,
-   title={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
+title={Niśvāsatattvasaṃhitā},
+subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    year={2015},
    volume={1},
    editor={Goodall, Dominic},
@@ -1405,6 +1426,11 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    keywords={printsource},
 }
 
+@book{advaya,
+   title={Advayatārakopaniṣat},
+   note={see Yoga Upaniṣads}, 
+   keywords={printsource},
+}
 
 @book{nadabindu,
    title={Nādabindūpaniṣat},
@@ -1589,7 +1615,7 @@ address={Delhi},
 }
 
 @online{saubhagya,
-  title = {Saubhāgyalakṣmyzupaniṣat},
+  title = {Saubhāgyalakṣmyupaniṣat},
   editor = {Ḥattangadi, Ṣunder}, 
   year ={2016}, 
   organization = {sanskritdocuments.org}, 
